--- a/pg1_template_embree_vs2017/src/pg/pg1_embree/pg1_embree.vcxproj
+++ b/pg1_template_embree_vs2017/src/pg/pg1_embree/pg1_embree.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="objloader.h" />
     <ClInclude Include="raytracer.h" />
     <ClInclude Include="simpleguidx11.h" />
+    <ClInclude Include="SphericalBackground.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="structs.h" />
     <ClInclude Include="surface.h" />
@@ -198,6 +199,7 @@
     <ClCompile Include="raytracer.cpp" />
     <ClCompile Include="pg1_embree.cpp" />
     <ClCompile Include="simpleguidx11.cpp" />
+    <ClCompile Include="SphericalBackground.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
